# FluxSurfer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile.txt  testPhysics.out
CodeForTutorial/: System01twoEnergyNiveausNoSpin.cpp
additional_doc/: README.md  ReadMeOld.md
bootstrap_code/: example_01_experimental_layer_test.cpp  example_02_job_supervisor_example.cpp  experiment1_Parralellisation.cpp  experiment2_Parallelisation.cpp  testPhysicalStatistics.cpp
code/: dataSet_and_Solver.cpp  ode_solvers.cpp  parallel_processing_code.cpp  physicalFormulas.cpp  quantum_system_code.cpp  wanderer_code.cpp
testSystemSaves/: METADATA.csv  METADATA.json  System no. 0  System no. 1  System no. 2  System no. 3  System no. 4  System no. 5  System no. 6  System no. 7  System no. 8  System no. 9
tools/: DataViewer.py  binaryNumberUtility.py  fileUtility.py  menu.py  plotChargeCurve.py  quantities.py  tools
